Anonymous | Login | 2021-01-15 21:13 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031650 | Community | [OCCT] OCCT:Visualization | public | 2020-07-03 23:55 | 2020-12-02 17:13 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.4.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031650: Visualization - invalid picking of object with local transformation and per-object clipping plane | ||||||||
Description | Picking of the object with local transformation and custom clipping plane produces incorrect results. | ||||||||
Steps To Reproduce | pload XDE MODELING VISUALIZATION vclear vinit View1 vaxo testreadstep [locate_data_file screw.step] s vdisplay -dispMode 1 -highMode 1 s vsetlocation s 0 0 20 vfit catch {vclipplane -delete p} # OK for global clipping vclipplane p -equation 0 0 -1 -10 -set vmoveto 205 205 if { [vreadpixel 205 320 -name -rgb] != "BURLYWOOD2" } { puts "Error" } # KO for local clipping vclipplane p -equation 0 0 -1 -10 -set s vmoveto 205 205 if { [vreadpixel 205 320 -name -rgb] != "BURLYWOOD2" } { puts "Error" } | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs/vis/bug31650 | ||||||||
Attached Files | |||||||||
![]() |
|
(0092986) git (administrator) 2020-07-04 14:35 |
Branch CR31650 has been created by kgv. SHA-1: 0bb865db53e49c8f3ea198cf7a284df50fe4f76a Detailed log of new commits: Author: kgv Date: Sat Jul 4 14:37:05 2020 +0300 0031650: Visualization - invalid picking of object with local transformation and per-object clipping plane SelectMgr_SelectingVolumeManager::SetViewClipping() now updates clipping range using picking ray in world coordinates, as clipping planes are always defined in world space. |
(0092989) kgv (developer) 2020-07-04 21:38 |
Patch is ready for review in OCCT branch CR31650. |
(0093005) osa (developer) 2020-07-06 09:42 |
The patch was reviewed without remarks |
(0093098) bugmaster (administrator) 2020-07-11 12:12 |
Combination - OCCT branch : IR-2020-07-10 master SHA - 74440d215bf268902458b25e36a61c791f21fc38 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-07-10 SHA - 6e90d3ea8d7f26e39ec8b263c708ad6ecf5dfaaa was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17210.790000000085 / 17175.910000000105 [+0.20%] Products Total CPU difference: 11229.020000000071 / 11228.490000000076 [+0.00%] Windows-64-VC14: OCCT Total CPU difference: 18725.6875 / 18705.46875 [+0.11%] Products Total CPU difference: 11144.125 / 13046.140625 [-14.58%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0093125) git (administrator) 2020-07-11 12:31 |
Branch CR31650 has been deleted by inv. SHA-1: 0bb865db53e49c8f3ea198cf7a284df50fe4f76a |
![]() |
|||
occt: master 72e9e867
Timestamp: 2020-07-04 11:37:05 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031650: Visualization - invalid picking of object with local transformation and per-object clipping plane SelectMgr_SelectingVolumeManager::SetViewClipping() now updates clipping range using picking ray in world coordinates, as clipping planes are always defined in world space. |
||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.cxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector.cxx | [ Diff ] [ File ] | ||
mod - src/SelectMgr/SelectMgr_ViewerSelector3d.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/vis/bug31650 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-07-03 23:55 | kgv | New Issue | |
2020-07-03 23:55 | kgv | Assigned To | => kgv |
2020-07-03 23:55 | kgv | Relationship added | related to 0030777 |
2020-07-04 11:18 | kgv | Summary | Visualization - invalid picking on object with local transformation and clipping plane => Visualization - invalid picking of object with local transformation and clipping plane |
2020-07-04 14:09 | kgv | Summary | Visualization - invalid picking of object with local transformation and clipping plane => Visualization - invalid picking of object with local transformation and per-object clipping plane |
2020-07-04 14:35 | git | Note Added: 0092986 | |
2020-07-04 21:38 | kgv | Note Added: 0092989 | |
2020-07-04 21:38 | kgv | Assigned To | kgv => osa |
2020-07-04 21:38 | kgv | Status | new => resolved |
2020-07-06 09:42 | osa | Note Added: 0093005 | |
2020-07-06 09:42 | osa | Assigned To | osa => bugmaster |
2020-07-06 09:42 | osa | Status | resolved => reviewed |
2020-07-11 12:12 | bugmaster | Note Added: 0093098 | |
2020-07-11 12:12 | bugmaster | Status | reviewed => tested |
2020-07-11 12:15 | bugmaster | Test case number | => bugs/vis/bug31650 |
2020-07-11 12:22 | bugmaster | Changeset attached | => occt master 72e9e867 |
2020-07-11 12:22 | bugmaster | Status | tested => verified |
2020-07-11 12:22 | bugmaster | Resolution | open => fixed |
2020-07-11 12:31 | git | Note Added: 0093125 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |