0031650: Visualization - invalid picking of object with local transformation and per-object clipping plane

SelectMgr_SelectingVolumeManager::SetViewClipping() now updates clipping range
using picking ray in world coordinates, as clipping planes are always defined in world space.